{
    "name": "DefaultInput",
    "maps": [
        {
            "name": "Character",
            "id": "8a40676f-cc96-4b8b-b33a-25a1e56e92bb",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "3de11528-33a7-480c-bd3d-4cfe62275a2a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "169158fe-a93d-46bf-a79f-7c5a8b1234f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "7b77a438-36fd-4c59-b856-b8e3571ec96f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CrouchRelease",
                    "type": "Button",
                    "id": "5401abca-8d5d-4336-86b0-d9ce1a1086a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Prone",
                    "type": "PassThrough",
                    "id": "d1783b34-7203-46e8-9b79-34447bc48482",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "b31e573d-bbbc-4363-9849-0e4462dbaeaa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "31d43a9b-97df-40b5-9aca-e659f825c73e",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "97b53a35-2272-46b4-ac79-9b1d8b3332d9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "eda4b7d3-104c-47b6-978a-428f44f5d559",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6adb8585-8c57-45ec-8b2c-05fa9803c000",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a71f0aea-e58c-4881-91b5-04c60305aed6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "5e93b60b-9571-48d2-a538-8772307b13e9",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3955f27e-079d-49f9-beee-40209676e1e9",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "aa223732-edd0-49a3-aab0-ac74a5fc0bb9",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "85d330f8-c6dd-4654-8251-4972a81914a6",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0e4e0397-ac14-4465-943a-e64bcddea80c",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e1c14255-caaf-48c6-ab79-11ae3c848eb5",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "845f2c9b-7b4d-45c7-ac76-6f9bd7d33e1a",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92f633fd-504a-472a-b926-8c3203461cf3",
                    "path": "<Keyboard>/z",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Prone",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e04fcf4-a4ea-4b2f-9507-099e69e47d89",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dda0038e-1fae-4b21-ad31-c9259a61d83d",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "CrouchRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "View",
            "id": "f97e5f56-bfd1-475b-983a-ded73d5ed277",
            "actions": [
                {
                    "name": "CameraView",
                    "type": "PassThrough",
                    "id": "48470ef3-e1e6-49ca-a8f5-a2c42eadd9a5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ZoomScrollDown",
                    "type": "Value",
                    "id": "2cb0a12f-8ce0-454f-a6c2-19fa7c00e983",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ZoomScrollUp",
                    "type": "Value",
                    "id": "202ea396-aa9e-4c26-99f3-c3151f4e019b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom",
                    "type": "PassThrough",
                    "id": "044b39d2-f437-442f-9200-4a4402d707c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4a691420-fb97-4cfe-ab5a-f025ec8d8436",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7d4cc0f-9ed6-492b-bf58-4fdefc4dac69",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "663dc44f-651d-40cb-824c-981b6d356bad",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomScrollUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3859e55-33e4-49ca-8a44-b074a578e5c6",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomScrollDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Grab",
            "id": "9ee75dba-4329-4a65-90ac-5991cc4fe37a",
            "actions": [
                {
                    "name": "RotateItem",
                    "type": "PassThrough",
                    "id": "8663914c-5369-4b31-bfcc-dc61b9cbc646",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldItem",
                    "type": "Button",
                    "id": "febc951c-4b2b-4322-a466-5a013b9f88bc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThrowItem",
                    "type": "Button",
                    "id": "08b6e1db-910b-423b-8aa6-b9329e239a71",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScrollItem",
                    "type": "PassThrough",
                    "id": "94913e2e-803f-46cc-8dd4-d78e6cbfb1f3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c4bdd8a9-0ebc-47b7-8baf-852c4e6d2230",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd1b4e6a-0a5d-4a65-8a1a-4958dfa80fb3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HoldItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96a21674-f4ab-47fe-b233-87e7c1b74e85",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrowItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9ad63db-f143-4fbd-b21f-f5a10253024a",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Flashlight",
            "id": "96760602-fb21-417a-985d-7d61dc3c9959",
            "actions": [
                {
                    "name": "LightSwitch",
                    "type": "Button",
                    "id": "574fbc59-9a8f-4abe-bcc1-5bf5f8fa5585",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e0f39b77-0ce5-4259-8ee9-e2383611ff86",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Interactables",
            "id": "a71ad35d-8ac8-4b2b-bae0-f4182338b415",
            "actions": [
                {
                    "name": "InteractButton",
                    "type": "Button",
                    "id": "bb149dae-dab6-4fce-a928-f88616cb624e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0adf3ba0-eed2-4dfa-9673-f5878fc6ceee",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InteractButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}